style.css
* {
    margin: 0;
    padding: 0;
    border: 0;
}

h1, h2, h3, h4, h5, h6 {
    text-align: center;
}

a {
    color: inherit;
    text-decoration: none;
    font-style: italic;
}

a:hover {
    opacity: 0.6;
}

body {
    color: white;
    background-color: #101010;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

.header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background-color: #303030f0;
    z-index: 100;
}

.navbar {
    white-space: nowrap;
    text-align: right;
    min-width: fit-content;
}

.navbar > a {
    padding: 0 10px;
}

.logo {
    letter-spacing: 3px;
    text-align: left;
}

#logo {
    white-space: nowrap;
    font-style: normal;
}

#header-spacer {
    padding-top: 120px;
}

.content {
    align-items: center;
    padding: 30px;
    margin: 10px auto;
    max-width: 1000px;
}

.centered {
    text-align: center;
}

.spaced {
    padding-top: 30px;
}

.container {
    display: flex;
    align-items: center;
}

.box {
    width: 50%;
    padding: 5px;
}

@media screen and (max-width: 800px) {
    .container {
        flex-direction: column;
    }
    #header-spacer {
        padding-top: 150px;
    }
    .logo, .navbar {
        text-align: center;
    }
    .box {
        width: 100%;
    }
}

